Translated the dpkg-gencontrol manual page.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-31 20:03+0100\n"
+"PO-Revision-Date: 2007-07-31 20:16+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5722,7 +5722,7 @@ msgstr "2007-06-12"
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:4
 msgid "dpkg-gencontrol - generate Debian control files"
-msgstr ""
+msgstr "dpkg-gencontrol - skapa Debians kontrollfiler"
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:8
@@ -5736,11 +5736,14 @@ msgid ""
 "generates a binary package control file (which defaults to debian/tmp/DEBIAN/"
 "control); it also adds an entry for the binary package to B<debian/files>."
 msgstr ""
+"B<dpkg-gencontrol> läser information från ett uppackat Debiankällkodsträd "
+"och genererar en control-fil för binärpaketet (som standard debian/tmp/DEBIAN/"
+"control). Dessutom skapas en post för binärpaketet i B<debian/files>."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:20
 msgid "Sets the version number of the binary package which will be generated."
-msgstr ""
+msgstr "Sätter versionsnumret på binärpaketet som skall skapas."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:24
@@ -5748,6 +5751,8 @@ msgid ""
 "Set an output substitution variable. See B<deb-substvars>(5) for discussion "
 "of output substitution."
 msgstr ""
+"Ställer in en utdatasubstitueringsvariabel. Se B<deb-substvars>(5) för "
+"en beskrivning av utdatasubstituering."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:55
@@ -5763,6 +5768,10 @@ msgid ""
 "otherwise it is essential to select which binary package's information to "
 "generate."
 msgstr ""
+"Skapa information för det binära paketet I<paket>. Om källkodens "
+"control-fil bara innehåller ett binärpaket behöver inte flaggan anges. "
+"I alla andra fall är det nödvändigt att välja vilket binärpakets information "
+"som skall skapas."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:62
@@ -5776,6 +5785,8 @@ msgid ""
 "Assume the filename of the package will be I<filename> instead of the normal "
 "package_version_arch.deb filename."
 msgstr ""
+"Anta att filnamnet för paketet skalla vara I<filnamn> istället för det normala "
+"paket_version_ark.deb-filnamnet."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:67
@@ -5792,12 +5803,18 @@ msgid ""
 "default behaviour. If you want to get the old behaviour you can use the B<-"
 "U> option to delete the fields from the control file."
 msgstr ""
+"Dessa flaggor ignoreras för kompatibilitet med äldre versioner av dpkg-dev "
+"men avråds numera ifrån. De användes tidigare för att tala om för "
+"dpkg-gencontrol att inkludera Section- och Priority-fälten i control-filen. "
+"Detta är numera standardbeteendet. Om du vill återskapa det gamla "
+"beteendet kan du använda flaggan B<-U> för att ta bort fälten från "
+"control-filen."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:76
 #, no-wrap
 msgid "B<-P>I<packagebuilddir>"
-msgstr ""
+msgstr "B<-P>I<paketbyggkatalog>"
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:89
@@ -5807,6 +5824,10 @@ msgid ""
 "the B<Installed-Size> substitution variable and control file field (using "
 "B<du>), and for the default location of the output file."
 msgstr ""
+"Talar om för B<dpkg-source> att paketet byggs i I<paketbyggkatalog> "
+"i stället för B<debian/tmp>. Värdet används för att bestämma standardvärdet "
+"för substitueringsvariabeln och control-filsfältet <Installed-Size> (med hjälp "
+"av B<du>), samt för att välja standardplacering av utdatafilen."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:89 ../../man/dpkg-shlibdeps.1:80
@@ -5820,6 +5841,8 @@ msgid ""
 "Print the control file to standard output, rather than to B<debian/tmp/"
 "DEBIAN/control> (or I<packagebuilddir>B</DEBIAN/control> if B<-P> was used)."
 msgstr ""
+"Skriv control-filen på standard ut, i stället för till B<debian/tmp/DEBIAN/control> "
+"(eller I<paketbyggkatalog>B</DEBIAN/control> om B<-P> användes)."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:106
@@ -5833,6 +5856,8 @@ msgid ""
 "The main source control information file, giving version-independent "
 "information about the source package and the binary packages it can produce."
 msgstr ""
+"Huvudkällkodskontrollinformationsfil, vilken innehåller versionsoberoende "
+"information om källkodspaketet och de binärpaket som kan skapas från det."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:118
@@ -5841,6 +5866,9 @@ msgid ""
 "B<dpkg-gencontrol> adds the presumed filenames of binary packages whose "
 "control files it generates here;"
 msgstr ""
+"Listan över genererade filer som ingår i insändningen som skapas. "
+"B<dpkg-gencontrol> lägger till de förutsatta filnamnen på binärpaketen "
+"vars control-filer det genererar här;"
 
 # type: TH
 #: ../../man/dpkg-name.1:6
