--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-31  Shiva Prasad Pokharel  <pokharelshiv@gmail.com>
+
+	* ne.po: Updated to 921t.
+
 2007-07-24  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 921t.
