--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -215,7 +215,7 @@ Copyright (C) 2000 Wichert Akkerman
 .br
 Copyright (C) 2006 Frank Lichtenheld
 .br
-Copyright (C) 2007 Raphaël Hertzog
+Copyright (C) 2007 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
