Fix lintian warning about accented character in man page (ë -> \[:e]) (bis)

--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -93,7 +93,7 @@ Show the version and exit.
 .BR dpkg\-shlibdeps (1).
 .
 .SH AUTHORS
-Copyright (C) 2007 Raphaël Hertzog
+Copyright (C) 2007 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
