--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-05  Helge Kreutzmann  <debian@helgefjell.de>
+
+        * po/de.po: Updated to 1111t6f165u.
+
 2007-07-31  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po, po/sv.add: Updated to 991t291u.
