Added ChangeLog entry for updated Swedish manual page translation.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-05  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1282t.
+
 2007-07-31  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po, po/sv.add: Updated to 991t291u.
